syntax = "proto3";

package scenes.v1;

import "google/protobuf/wrappers.proto";

service ScenesService {
  // Original: GetSceneList
  rpc List(ListRequest) returns (ListResponse);
  // Original: GetCurrentProgramScene
  rpc Current(CurrentRequest) returns (CurrentResponse);
  // Original: SetCurrentProgramScene
  rpc SetCurrent(SetCurrentRequest) returns (SetCurrentResponse);
  // Original: GetCurrentPreviewScene
  rpc CurrentPreview(CurrentPreviewRequest) returns (CurrentPreviewResponse);
  // Original: SetCurrentPreviewScene
  rpc SetCurrentPreview(SetCurrentPreviewRequest) returns (SetCurrentPreviewResponse);
  // Original: SetSceneIndex
  rpc SetIndex(SetIndexRequest) returns (SetIndexResponse);
  // Original: SetSceneName
  rpc SetName(SetNameRequest) returns (SetNameResponse);
  // Original: CreateScene
  rpc Create(CreateRequest) returns (CreateResponse);
  // Original: RemoveScene
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  // Original: GetSceneTransitionOverride
  rpc TransitionOverride(TransitionOverrideRequest) returns (TransitionOverrideResponse);
  // Original: SetSceneTransitionOverride
  rpc CreateTransitionOverride(CreateTransitionOverrideRequest) returns (CreateTransitionOverrideResponse);
  // Original: DeleteSceneTransitionOverride
  rpc DeleteTransitionOverride(DeleteTransitionOverrideRequest) returns (DeleteTransitionOverrideResponse);
}

message ListRequest {}

message ListResponse {
  string current = 1;
  google.protobuf.StringValue current_preview = 2;
  repeated Scene scenes = 3;

  message Scene {
    string name = 1;
    uint64 index = 2;
    bool group = 3;
  }
}

message CurrentRequest {}

message CurrentResponse {
  string name = 1;
}

message SetCurrentRequest {
  string name = 1;
}

message SetCurrentResponse {}

message CurrentPreviewRequest {}

message CurrentPreviewResponse {
  string name = 1;
}

message SetCurrentPreviewRequest {
  string name = 1;
}

message SetCurrentPreviewResponse {}

message SetIndexRequest {
  uint32 index = 1;
}

message SetIndexResponse {}

message SetNameRequest {
  string name = 1;
  string new_name = 2;
}

message SetNameResponse {}

message CreateRequest {
  string name = 1;
}

message CreateResponse {}

message RemoveRequest {
  string name = 1;
}

message RemoveResponse {}

message TransitionOverrideRequest {}

message TransitionOverrideResponse {}

message CreateTransitionOverrideRequest {}

message CreateTransitionOverrideResponse {}

message DeleteTransitionOverrideRequest {}

message DeleteTransitionOverrideResponse {}
